--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
   "packageManager": "yarn@4.6.0",
   "resolutions": {
     "@storybook/react-dom-shim@npm:7.6.20": "https://verdaccio.tobbe.dev/@storybook/react-dom-shim/-/react-dom-shim-8.0.8.tgz"
+  },
+  "dependencies": {
+    "@redwoodjs/web": "^8.6.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
