--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+   "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "allowJs": true,
     "esModuleInterop": true,
@@ -7,6 +8,7 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "skipLibCheck": false,
+    "strict":true,
     "rootDirs": [
       "./src",
       "../.redwood/types/mirror/web/src",
